Update pokemon feature
