# api/models/pokemons.js
@@ -1,6 +1,6 @@
 'use strict';
 module.exports = (sequelize, DataTypes) => {
-  const Pokemones = sequelize.define('Pokemones', {
+  const Pokemons = sequelize.define('Pokemons', {
     name: DataTypes.STRING,
     des: DataTypes.STRING,
     imageLink: DataTypes.STRING,
@@ -8,10 +8,9 @@ module.exports = (sequelize, DataTypes) => {
     locationLat: DataTypes.STRING,
     locationLong: DataTypes.STRING,
     isCatch: DataTypes.BOOLEAN
-
   }, {});
-  Pokemones.associate = function(models) {
+  Pokemons.associate = function(models) {
     // associations can be defined here
   };
-  return Pokemones;
+  return Pokemons;
 };
